# smart_ptr

./: .gitignore  CMakeLists.txt  CMakeSrc.cmake  LICENSE  README.md
src/: linked_ptr.h  linked_ptr.hpp
test/: TestObject.h  general_tests.h  main.cpp
